Fixed row-column alignment

--- a/styles/landing-page.css
+++ b/styles/landing-page.css
@@ -48,8 +48,11 @@ a {
     .flex-container {
         padding-top: 4rem;
     }
+    .row-style {
+        flex-direction: column-reverse;
+    }
     .img-design {
-        margin: 5rem 0 0 2rem;
+        margin: 2rem 0 0 2rem;
     }
 }
 @media (max-width: 767px) {
@@ -60,10 +63,20 @@ a {
     .flex-container {
         padding-top: 5rem;
     }
+    .row-style {
+        flex-direction: column-reverse;
+    }
     .img-design {
-        top: -8rem;
+        top: -9rem;
     }
 }
+
+@media (max-width: 991px) {
+    .row-style {
+        flex-direction: column-reverse;
+    }
+}
+
 @media (max-width: 1199px) {
     .form-container {
         padding: 2rem 0;
